--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial scale=1" />
+    <title>To-do List</title>
     <link
       href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css"
       rel="stylesheet"
     />
     <link href="style.css" rel="stylesheet" />
+    <link href="theme.css" rel="stylesheet" />
 
     <link
       rel="stylesheet"
@@ -15,11 +18,15 @@
   </head>
 
   <body>
-    <button class="mdc-button--raised">
-      <span class="mdc-button__label">Contained Button</span>
+    <button class="mdc-button--outlined">
+      <div class="mdc-button__ripple" data-mdc-auto-init="MDCRipple"></div>
+      <span class="mdc-button__label">Outlined Button</span>
     </button>
 
     <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
     <script src="script.js"></script>
+    <script>
+      mdc.autoInit();
+    </script>
   </body>
 </html>
