--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <link href="style.css" rel="stylesheet" />
-    <link href="theme.css" rel="stylesheet" />
+    <link href="my-theme.css" rel="stylesheet" />
 
     <link
       rel="stylesheet"
@@ -26,7 +26,7 @@
     <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
     <script src="script.js"></script>
     <script>
-      mdc.autoInit();
+      window.mdc.autoInit();
     </script>
   </body>
 </html>
