--- a/index.html
+++ b/index.html
@@ -1,32 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial scale=1" />
-    <title>To-do List</title>
-    <link
-      href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css"
-      rel="stylesheet"
-    />
-    <link href="style.css" rel="stylesheet" />
-    <link href="my-theme.css" rel="stylesheet" />
-
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    />
+    <link rel="stylesheet" href="bundle.css">
   </head>
-
-  <body>
-    <button class="mdc-button--outlined">
-      <div class="mdc-button__ripple" data-mdc-auto-init="MDCRipple"></div>
-      <span class="mdc-button__label">Outlined Button</span>
-    </button>
-
-    <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
-    <script src="script.js"></script>
-    <script>
-      window.mdc.autoInit();
-    </script>
-  </body>
+  <body>Hello World</body>
 </html>
