--- a/index.html
+++ b/index.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-        <title>To-do List</title>
+    <title>To-do List</title>
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial scale=1" />
     <link
+      rel="stylesheet"
       href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css"
-      rel="stylesheet"
     />
-    <link rel="stylesheet"href="bundle.css" />
+    <link rel="stylesheet" href="bundle.css" />
 
-    <link
-      rel="stylesheet"
+    <link rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
   </head>
 
-  <body>
-    <button class="mdc-button--outlined">
-      <div class="mdc-button__ripple" data-mdc-auto-init="MDCRipple"></div>
-      <span class="mdc-button__label">Outlined Button</span>
-    </button>
+  <body class="mdc-typography">
+    <div class="mdc-touch-target-wrapper">
+      <button class="mdc-button mdc-button--touch">
+        <div class="mdc-button__ripple"></div>
+        <span class="mdc-button__label">My Accessible Button</span>
+        <div class="mdc-button__touch"></div>
+      </button>
+    </div>
 
-    <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
     <script src="bundle.js"></script>
     <script>
       window.mdc.autoInit();
