--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     
   </head>
   <body class="mdc-typography">
+     <!-- Apply Material headline3 style to this <h1> element -->
+    <h1 class="mdc-typography--headline3">Hello, Material Starter Kit!</h1>
+    <p>
+       A starter kit to get you up and running with Material Components for the Web. <a href="https://glitch.com/~material-starter-kit">Remix and start theming.</a>
+    </p>
+    <br>
     
     <div class="mdc-touch-target-wrapper">
       <button class="mdc-button mdc-button-otulined mdc-button--touch">
