⛸📰 Checkpoint ./app.scss:5887444/279 ./package.json:5887444/4000 ./my-theme.scss:5887444/272 ./index.html:5887444/58

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <br>
     
     <div class="mdc-touch-target-wrapper">
-      <button class="mdc-button mdc-button-otulined mdc-button--touch">
+      <button class="mdc-button mdc-button-outlined mdc-button--touch">
         <div class="mdc-button__ripple" data-mdc-auto-init="MDCRipple"></div>
         <span class="mdc-button__label">My Accessible Button</span>
         <div class="mdc-button__touch"></div>
